fixed navbar being too tall

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,5 @@
 body {
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: .9em;
   padding: 50px 0;
 }
 p, td, th {
